# zulip-daily-digest

./: .gitignore  Makefile  README.md  bot.py  pyproject.toml
ansible/: deploy.yml  inventory
ansible/roles/code/tasks/: main.yml
ansible/roles/code/vars/: main.yml
ansible/roles/svc/tasks/: main.yml
src/: model.py  notifier.py  parse.py  setup.py  summarize.py  utils.py
