[tool.poetry]
package-mode = false


[project]
name = "zulip-daily-digest"
version = "0.1.0"
description = "Zulip bot to provide daily summary of subscribed channels"
authors = [
    {name = "aadriien", email = "adriienlynch@gmail.com"}
]


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dotenv = "^1.0.0"
zulip = "^0.9.0"
click = "^8.3.0"
transformers = "^4.57.1"
torch = "^2.9.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

